fix(ui): correct button disabled state styles

--- a/src/parts/part-2/PagePart2.module.css
+++ b/src/parts/part-2/PagePart2.module.css
@@ -19,8 +19,8 @@
   transition: opacity 0.1s ease-in-out;
 }
 
-button:hover,
-button:active {
+.btn-group > button:hover,
+.btn-group > button:active {
   opacity: 1 !important;
 }
 
