--- a/src/parts/part-2/PagePart2.module.css
+++ b/src/parts/part-2/PagePart2.module.css
@@ -48,7 +48,7 @@
 .modal-headshot-content-wrapper {
   display: flex;
   align-items: center;
-  gap: var(--size-s);
+  gap: var(--size-xs);
 }
 .modal-headshot-content {
   display: flex;
@@ -78,13 +78,15 @@
 }
 
 .modal-content-viewport {
-  max-height: calc(var(--r) * 45);
+  max-height: calc(var(--r) * 48);
 }
 
 .modal-content {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--r);
+
+  padding-right: var(--padding-xs);
 }
 
 .modal-content-scrollbar {
@@ -93,7 +95,6 @@
   background-color: #d1d3d4;
   width: var(--r);
   border-radius: 9999px;
-  margin-right: calc(var(--r) * -2);
   opacity: 0;
   transition: opacity 150ms;
   pointer-events: none;
@@ -161,30 +162,9 @@
 .swiper-wrapper {
   display: flex;
   align-items: center;
-  gap: var(--size-xs);
+  gap: var(--r);
 }
-.swiper-root {
-  border: 1px solid var(--color-gray-200);
-  border-radius: 0.375rem;
-}
-.swiper-panel {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 8rem;
-  outline: 0;
 
-  &:focus-visible {
-    outline: 2px solid var(--color-blue);
-    outline-offset: -1px;
-    border-radius: 0.375rem;
-  }
-
-  &[hidden] {
-    display: none;
-  }
-}
 .swiper-op-btn {
   display: flex;
   align-items: center;
@@ -205,9 +185,9 @@
 }
 
 .swiper-op-btn:first-child {
-  margin-left: calc(var(--size-m) * -0.75);
+  margin-left: calc(var(--size-m) * -0.8);
 }
 
 .swiper-op-btn:last-child {
-  margin-right: calc(var(--size-m) * -0.75);
+  margin-right: calc(var(--size-m) * -0.8);
 }
