--- a/src/parts/part-2/PagePart2.module.css
+++ b/src/parts/part-2/PagePart2.module.css
@@ -1,3 +1,34 @@
+.question-list-wrapper,
+.question-list-viewport {
+  position: relative;
+
+  width: 100%;
+  height: 100%;
+}
+
+.question-list-viewport {
+  padding-right: var(--padding-l);
+
+  overflow: hidden;
+}
+
+.question-list-track {
+  width: var(--size-s);
+  height: 100%;
+
+  background-color: #d1d3d4;
+
+  border-radius: 9999px;
+}
+
+.question-list-thumb {
+  width: var(--size-s);
+
+  background-color: var(--color-w1);
+
+  border-radius: 9999px;
+}
+
 .btn-group {
   display: flex;
   flex-direction: column;
